Add character attributes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,3 +71,4 @@ mongo-database:
   dropped-items-collection: "dropped-items"
   inventory-collection: "inventory"
   equip-collection: "equip"
+  player-attributes: "playerAttributes"
