Motion over sockets test

--- a/build.gradle
+++ b/build.gradle
@@ -166,5 +166,5 @@ dockerCompose {
     // do not wait for debug port
     tcpPortsToIgnoreWhenWaiting = [5005]
     // Mac M1 fix:
-//    executable = '/usr/local/bin/docker-compose-v1'
+    executable = '/usr/local/bin/docker-compose-v1'
 }
