Adjustments for character creation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,9 @@ micronaut:
         enabled: true
         mapping: /**
         paths: classpath:public
+jackson:
+  serialization:
+    writeDatesAsTimestamps: false
 jooq:
   datasources:
     default:
