--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,10 @@ micronaut:
         enabled: true
         mapping: /**
         paths: classpath:public
+  executors:
+    consumer:
+      type: fixed
+      nThreads: 15
 jackson:
   serialization:
     writeDatesAsTimestamps: false
@@ -48,6 +52,26 @@ datasources:
       connection-test-query: "SELECT 1"
       validation-timeout: 50000
 
+kafka:
+  bootstrap:
+    servers: 127.0.0.1:9093
+  security:
+    protocol: SASL_PLAINTEXT
+  sasl:
+    mechanism: PLAIN
+    jaas:
+      config: org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="password123";
+  consumers:
+    mmo-server:
+      bootstrap:
+        servers: 127.0.0.1:9093
+      session:
+        timeout:
+          ms: 30000
+      auto:
+        offset:
+          reset: earliest
+
 mongodb:
 #  Set username/password as env vars
   uri: mongodb://mongo_mmo_server:mongo_password@localhost:27017/mmo_server?authSource=admin
@@ -59,7 +83,6 @@ mongodb:
     maxWaitQueueSize: 5
   connectionPool:
     maxSize: 20
-
 
 # MongoDB collections
 mongo-database:
