--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '2'
+networks:
+  kafka-net:
+    name: kafka-net
+    driver: bridge
 services:
 #  In future, create a dockerized container for the server, then make the 2 db images as dependencies
-  mmo_server:
+  postgres:
     image: postgres:15.1
-    depends_on:
-      - "mongo_db"
     environment:
       - POSTGRES_DB=mmo_server
       - POSTGRES_USER=mmo_server
@@ -12,7 +14,6 @@ services:
       - PGDATA=/var/lib/pgsql_docker/data
     ports:
       - "5432:5432"
-
   mongo_db:
     image: mongo
     environment:
@@ -22,7 +23,42 @@ services:
       - "27017:27017"
     volumes:
       - mongodata:/data/db
-    restart: unless-stopped
-
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 2181:2181
+    networks:
+      - kafka-net
+    tmpfs: "/datalog"
+  kafka1:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - 9092:9092
+      - 9093:9093
+    networks:
+      - kafka-net
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      ZOOKEEPER_SASL_ENABLED: false
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,SASL_PLAINTEXT://localhost:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,SASL_PLAINTEXT:SASL_PLAINTEXT
+      KAFKA_SECURITY_INTER_BROKER_PROTOCOL: SASL_PLAINTEXT
+      KAFKA_SASL_MECHANISM_INTER_BROKER_PROTOCOL: PLAIN
+      KAFKA_OPTS: "-Djava.security.auth.login.config=/etc/kafka/configs/kafka_server_jaas.conf"
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: true
+      KAFKA_SASL_ENABLED_MECHANISMS: PLAIN
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 1
+      KAFKA_NUM_PARTITIONS: 2
+#     https://github.com/robcowart/docker_compose_cookbook/blob/master/confluent_kafka_oss/docker-compose.yml
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    volumes:
+      - ./configs:/etc/kafka/configs
+    restart: always
 volumes:
   mongodata:
