--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ import org.flywaydb.gradle.task.FlywayMigrateTask
 buildscript {
 	ext {
 		FLWAY_VERSION = "9.8.1"
-		JOOQ_VERSION = "8.1"
+		JOOQ_VERSION = "7.1.1"
 	}
 	configurations['classpath'].resolutionStrategy.eachDependency {
 		if (requested.group == 'org.jooq') {
@@ -203,5 +203,5 @@ dockerCompose {
 	// do not wait for debug port
 	tcpPortsToIgnoreWhenWaiting = [5005]
 	// Mac M1 fix:
-//    executable = '/usr/local/bin/docker-compose-v1'
+	executable = '/usr/local/bin/docker-compose-v1'
 }
