Refactor player motion and prepare mob socket

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -79,3 +79,4 @@ mongo-database:
   player-attributes: "playerAttributes"
   player-motion: "playerMotion"
   mob-instance: "mobInstance"
+  mob-attributes: "mobAttributes"
