--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,3 +96,5 @@ mongo-database:
   player-attributes: "playerAttributes"
   player-motion: "playerMotion"
   mob-instance: "mobInstance"
+  mob-attributes: "mobAttributes"
+
