--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ micronaut:
     consumer:
       type: fixed
       nThreads: 15
+    io:
+      type: fixed
+      nThreads: 75
 jackson:
   serialization:
     writeDatesAsTimestamps: false
