--- a/build.gradle
+++ b/build.gradle
@@ -186,6 +186,9 @@ dependencies {
 	// Serializer
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
 
+	// Map difference
+	implementation 'com.google.guava:guava:31.1-jre'
+
 	// test
 	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
 	testImplementation 'org.assertj:assertj-core:3.24.2'
