add redis and spotless apply

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,14 @@ services:
       - "27017:27017"
     volumes:
       - mongodata:/data/db
+  redis:
+    image: redis
+    restart: always
+    ports:
+      - '6379:6379'
+    command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - cache:/data
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     environment:
@@ -62,3 +70,6 @@ services:
     restart: always
 volumes:
   mongodata:
+    driver: local
+  cache:
+    driver: local
