--- a/build.gradle
+++ b/build.gradle
@@ -189,6 +189,9 @@ dependencies {
 	// Map difference
 	implementation 'com.google.guava:guava:31.1-jre'
 
+	// redis
+	implementation("io.micronaut.redis:micronaut-redis-lettuce")
+
 	// test
 	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
 	testImplementation 'org.assertj:assertj-core:3.24.2'
