WIP, intoducing redis cache

--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,10 @@ dependencies {
 	implementation 'com.google.guava:guava:31.1-jre'
 
 	// redis
-	implementation("io.micronaut.redis:micronaut-redis-lettuce")
+	implementation "io.micronaut.redis:micronaut-redis-lettuce"
+	implementation 'org.redisson:redisson-micronaut:3.20.0'
+	implementation 'org.redisson:redisson:3.24.3'
+
 
 	// test
 	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
