--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -77,12 +77,18 @@ mongo-database:
   mob-attributes: "mobAttributes"
   actorStats: "actorStats"
 
+redisson:
+  single-server-config:
+    address: "redis://127.0.0.1:6379"
+  threads: 3
+  netty-threads: 6
+
 redis:
   uri: redis://localhost
   io-thread-pool-size: 5
   computation-thread-pool-size: 4
 #  ssl: true
-  timeout: 30s
+  timeout: 2s
 #  valueSerializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
 #  caches:
 #    default:
