Refactor cache to usable state

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,14 @@
 micronaut:
+#  caches:
+#    actor-stats-cache:
+#      maximumSize: 1000
+#    actorMotionCache:
+#      maximumSize: 1000
+#    actor-derived-stats-cache:
+#      maximumSize: 1000
+#    actorStatusCache:
+#      maximumSize: 1000
+
   application:
     name: mmo_server
   server:
@@ -91,6 +101,21 @@ redis:
 #  ssl: true
   timeout: 2s
 #  valueSerializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
-#  caches:
-#    default:
-#      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+  caches:
+    default:
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+    actor-stats-cache:
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+      maximumSize: 1000
+    actor-aggregated-statuses:
+      maximumSize: 1000
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+    actor-aggregated-derived:
+      maximumSize: 1000
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+    actor-motion-cache:
+      maximumSize: 1000
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+    actor-status-cache:
+      maximumSize: 1000
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
