--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,9 @@ dependencies {
 	// Map difference
 	implementation 'com.google.guava:guava:31.1-jre'
 
+	// cache
+	implementation("io.micronaut.cache:micronaut-cache-core")
+
 	// redis
 	implementation "io.micronaut.redis:micronaut-redis-lettuce"
 
