--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -109,3 +109,9 @@ redis:
     actor-status-cache:
       maximumSize: 1000
       value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+    actor-equip-cache:
+      maximumSize: 1000
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+    actor-equip-cache-map:
+      maximumSize: 1000
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
