--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -115,3 +115,9 @@ redis:
     actor-equip-cache-map:
       maximumSize: 1000
       value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+    udp-session-cache:
+      maximumSize: 1000
+      value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+
+feature-flags:
+  enableUdp: true
