--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 
 plugins {
 	id "com.github.johnrengelman.shadow" version "8.1.1"
-	id "io.micronaut.application" version "4.3.0"
-	id 'com.avast.gradle.docker-compose' version '0.17.5'
-	id "com.diffplug.spotless" version "6.22.0"
-	id("io.micronaut.openapi") version "4.1.2"
-	id 'org.graalvm.buildtools.native' version '0.9.28'
+	id "io.micronaut.application" version "4.4.2"
+	id "com.avast.gradle.docker-compose" version '0.17.7'
+	id "com.diffplug.spotless" version "6.25.0"
+	id "io.micronaut.openapi" version "4.4.2"
+	id "org.graalvm.buildtools.native" version '0.10.2'
 }
 
-version = "0.8"
+version = "0.8.2"
 group = "mmo_server"
 
 spotless {
@@ -56,61 +56,63 @@ micronaut {
 }
 
 dependencies {
-	implementation("io.micronaut:micronaut-http-client")
-	implementation("io.micronaut:micronaut-runtime")
-	implementation("io.micronaut:micronaut-validation")
-	runtimeOnly("ch.qos.logback:logback-classic")
-	annotationProcessor('io.micronaut.data:micronaut-data-processor:4.1.4')
-	implementation 'javax.annotation:javax.annotation-api:1.3.2'
+	implementation("io.micronaut:micronaut-http-client:4.6.3")
+	implementation("io.micronaut:micronaut-runtime:4.6.3")
+	implementation("io.micronaut:micronaut-validation:3.1.0")
+	runtimeOnly("ch.qos.logback:logback-classic:1.5.7")
+	annotationProcessor('io.micronaut.data:micronaut-data-processor:4.9.0')
+	implementation('javax.annotation:javax.annotation-api:1.3.2')
 	// micronaut v4 dependency:
-	runtimeOnly("org.yaml:snakeyaml")
+	runtimeOnly("org.yaml:snakeyaml:2.2")
 
 //	// swagger
-	implementation("io.swagger.core.v3:swagger-annotations")
+	implementation("io.swagger.core.v3:swagger-annotations:2.2.22")
 
 	// Flowable
-	implementation("io.micronaut.rxjava3:micronaut-rxjava3:3.1.0")
-	implementation("io.micronaut.rxjava3:micronaut-rxjava3-http-client:3.1.0")
+	implementation("io.micronaut.rxjava3:micronaut-rxjava3:3.5.0")
+	implementation("io.micronaut.rxjava3:micronaut-rxjava3-http-client:3.5.0")
 
 	// Lombok:
-	compileOnly 'org.projectlombok:lombok:1.18.30'
-	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+	compileOnly('org.projectlombok:lombok:1.18.34')
+	annotationProcessor('org.projectlombok:lombok:1.18.34')
 
 	// Micronaut inject
-	annotationProcessor(platform('io.micronaut:micronaut-bom:3.10.2'))
-	annotationProcessor("io.micronaut:micronaut-inject-java")
-	implementation(platform('io.micronaut:micronaut-bom:3.10.2'))
-	implementation("io.micronaut:micronaut-inject")
+	annotationProcessor(platform('io.micronaut:micronaut-bom:3.10.4'))
+	implementation('jakarta.inject:jakarta.inject-api:2.0.1')
+
+//	annotationProcessor("io.micronaut:micronaut-inject-java")
+	implementation(platform('io.micronaut:micronaut-bom:3.10.4'))
+	implementation("io.micronaut:micronaut-inject:4.6.3")
 
 	// transactional annotation
-	implementation('io.micronaut.spring:micronaut-spring:4.5.1')
+	implementation('io.micronaut.spring:micronaut-spring:5.8.0')
 
 	// MongoDB
 //	implementation("io.micronaut.data:micronaut-data-mongodb")
-	implementation "io.micronaut.mongodb:micronaut-mongo-reactive:4.6.0"
+	implementation "io.micronaut.mongodb:micronaut-mongo-reactive:5.4.0"
 
 	// Kafka
-	implementation("io.micronaut.kafka:micronaut-kafka")
+	implementation("io.micronaut.kafka:micronaut-kafka:5.6.0")
 
 	// Serializer
-	runtimeOnly 'io.micronaut:micronaut-jackson-databind:3.8.7'
-	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.2'
+	runtimeOnly 'io.micronaut:micronaut-jackson-databind:4.6.3'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2'
 
 	// Map difference
-	implementation 'com.google.guava:guava:31.1-jre'
+	implementation 'com.google.guava:guava:33.3.0-jre'
 
 	// cache
-	implementation("io.micronaut.cache:micronaut-cache-core")
+	implementation("io.micronaut.cache:micronaut-cache-core:5.0.0")
 
 	// redis
-	implementation "io.micronaut.redis:micronaut-redis-lettuce"
+	implementation("io.micronaut.redis:micronaut-redis-lettuce:6.6.0")
 
 	// test
-	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
-	testImplementation 'org.assertj:assertj-core:3.24.2'
+	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.0'
+	testImplementation 'org.assertj:assertj-core:3.26.3'
 	testImplementation "io.micronaut.test:micronaut-test-junit5"
-	testImplementation 'org.mockito:mockito-core:5.2.0'
-	testImplementation 'io.projectreactor:reactor-core:3.5.4'
+	testImplementation 'org.mockito:mockito-core:5.12.0'
+	testImplementation 'io.projectreactor:reactor-core:3.6.9'
 	testImplementation 'org.awaitility:awaitility:4.2.0'
 }
 
