--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,7 +32,7 @@ kafka:
       processing.guarantee: "exactly_once"
       auto.offset.reset: "earliest"
   bootstrap:
-    servers: kafka1:9093
+    servers: kafka-broker:9093
   security:
     protocol: SASL_PLAINTEXT
   sasl:
@@ -42,7 +42,7 @@ kafka:
   consumers:
     mmo-server:
       bootstrap:
-        servers: kafka1:9093
+        servers: kafka-broker:9093
       session:
         timeout:
           ms: 30000
@@ -51,13 +51,12 @@ kafka:
           reset: earliest
 
 mongodb:
-#  Set username/password as env vars
-#  uri: mongodb://mongo_mmo_server:mongo_password@localhost:27017/mmo_server?authSource=admin
-  uri: mongodb://mongo_db:mongo_password@mongo_db:27017/mmo_server?authSource=admin  # Use the Kubernetes service name and port
+  #  Set username/password as env vars
+  uri: mongodb://mongo_mmo_server:mongo_password@mongo-service:27017/mmo_server?authSource=admin
   options:
     maxConnectionIdleTime: 15000
     readConcern: majority
-#  For reactive MongoDB driver:
+  #  For reactive MongoDB driver:
   cluster:
     maxWaitQueueSize: 5
   connectionPool:
@@ -81,19 +80,17 @@ mongo-database:
 
 redisson:
   single-server-config:
-#    address: "redis://127.0.0.1:6379"
-  address: "redis://redis:6379"  # Use the Kubernetes service name and port
+    address: "redis://redis:6379"
   threads: 3
   netty-threads: 6
 
 redis:
-  uri: redis://redis:6379  # Use the Kubernetes service name and port
-  #  uri: redis://localhost
+  uri: redis://redis
   io-thread-pool-size: 5
   computation-thread-pool-size: 4
-#  ssl: true
+  #  ssl: true
   timeout: 2s
-#  valueSerializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
+  #  valueSerializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
   caches:
     default:
       value-serializer: io.micronaut.jackson.serialize.JacksonObjectSerializer
