--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,17 +32,17 @@ kafka:
       processing.guarantee: "exactly_once"
       auto.offset.reset: "earliest"
   bootstrap:
-    servers: kafka-broker:9093
+    servers: kafka-broker:9092
   security:
-    protocol: SASL_PLAINTEXT
-  sasl:
-    mechanism: PLAIN
-    jaas:
-      config: org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="password123";
+    protocol: PLAINTEXT
+#  sasl:
+#    mechanism: PLAIN
+#    jaas:
+#      config: org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="password123";
   consumers:
     mmo-server:
       bootstrap:
-        servers: kafka-broker:9093
+        servers: kafka-broker:9092
       session:
         timeout:
           ms: 30000
